--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -27,8 +27,14 @@
 
 \usepackage{lipsum} % Consente di inserire testo fittizio all'interno della tesi. Inutile in fase di scrittura della tesi. Eliminare questa dicitura e tutte le diciture \lorem all'interno del testo.
 
+\usepackage{listings} %Per il codice alloy
+
+\usepackage[dvipsnames] {xcolor}%Per il codice alloy
+
+\usepackage{alloy-style} %Per il codice alloy
 
 \usepackage{lineno}
+
 \modulolinenumbers[1]
 
 \usepackage[nopostdot,style=super,nonumberlist,toc, automake]{glossaries}
