--- a/RASD/main/SpecificRequirements.tex
+++ b/RASD/main/SpecificRequirements.tex
@@ -91,6 +91,34 @@ Only the standard Internet protocols.
 
 \section{Functional Requirements}
 
+\subsection{Scenarios}
+
+\textbf{First scenario:}\\
+Mario reads the newspaper and realize that the Covid-19 is a serious problem. He thinks that we should try to have behaviours that helps contain the problem, like take appointments on the spots we will go. He learns from internet that the supermarket where he usually goes to, is using an app to take appointments, Clup. He registers himself, and from day on when he needs to do grocery shopping, he uses the app to digitally line-up. When the app notifies him that his turn is coming, he goes out in the directions of the supermarket. And only in few cases he found himself waiting few minutes to enter inside the store.\\
+
+\textbf{Second scenario:}\\
+Francesca usually goes on the same supermarket to do groceries, but for one reason or another she did not go there for two weeks. When she returned to that store, she learnt that she needs to use an app to line up. She was told to download the app and to use it to line up, she did that and after she sign in. 
+On the app she founds that there are shown some data like  the number of people before her, the time she needs to wait before entering the store, etc. 
+Seeing that the waiting time is large she decided to go for a walk around the neighbourhood and to return when the waiting time is of five minutes. She returned from her walk and saw that there was only a couple of people outside, she decided to wait and after few minutes she entered.\\
+
+\textbf{Third Scenario:}\\
+Maria is an old lady, she does not possess a smartphone but only an old phone that does not have internet connection.
+She decides to go to the supermarket in which a clerk tells her that she needs to use an app to line up. She explains to him that she does not have the means to do it and so, she is brought to the totem where she retrieves a ticket. She is recommended to stay close to the supermarket and to wait it there. During the chat with the clerk she also found that this mechanism is always guaranteed. 
+Thanks to the fact that most people uses the app to line up, outside the store where the old lady is waiting, there are no crowds. Because all people either enter right away or at most they wait for few minutes, and so it reduces the risk for all.\\
+
+\textbf{Fourth scenario:}\\
+Andrea is a worker with a fixed schedule, every day he finishes to work at eight p.m., and so he has little time to do the groceries. He has tried to use the app Clup to line up, but he found himself, sometimes, with a waiting time of twenty minutes, without knowing what to do except to go to the store and wait outside. To try to solve this problem he used the “book a visit” function and took an appointment for the following day, choosing a schedule that worked for him, allowing him to arrive without hurry to the store. The next day he went to the store right on time and with a hint of amazement he entered right away. Impressed by the pleasant experience from that day on he started using regularly that function since it allows him to adjust it to his needs.\\
+
+
+\textbf{Fifth scenario:}\\
+Alfredo always uses the app to line up at the supermarket. One day he notices that when he lines up from his house the waiting time is always of twenty minutes even on the days where he goes there and see few people. With some reasoning he comes to the conclusion that the app gives him always a waiting time that is similar at the time he usually needs to get there. In fact, he really needs little less than twenty minutes to go there.\\
+
+
+\textbf{Sixth scenario 6:}\\
+Claudia is the manager of a supermarket that uses Clup and she checks the app to manage the flux of people inside the store. She always checks that the flux of people never reaches the eighty-five percent of the maximum capacity that the D.P.C.M. imposed to the store, when there are not bookings and not more than ninety percent of the maximum capacity if there are some bookings that specify the department. 
+One day even if the store respects these constrains, she notices that on one department, next to the entrance, a crowd is forming. Maybe it is happening because a recent sale on a category of products. She thinks that it would be appropriate to do not let other people enter until the problem is solved. So, she decides to use the app to temporarily block the number of new entrances. Leaving like that for few minutes the situation solve itself and she can allow again people to enter.\\
+
+
 \subsection{Requirements}
 
 Bla bla bla...
@@ -641,16 +669,61 @@ Bla bla bla...
 
 \section{Performance Requirements}
 
+We can differentiate our performance requirements in 2 categories:
+\begin{itemize}
+	\item The first ones are necessary to respect a goal, in our case are relative to the goal to limit the physical line situation in the proximity of the store. In 			order to achieve that, our application must precisely estimate the right time of arrival time of every single customer with an absolute error less than five 			minutes. That depends on the precise estimation of the position of the customer after lining up and a correct estimation on the duration of the customers 			time staying. Them also need to be under a certain value of error, for the first one the error must be less than ten meters instead the estimation of the time 	of the customer staying must be less than three minutes. Also, these estimations must not require more than twenty seconds to compute in order to be 			always relevant when it is shown to the customer.
+	\item The second ones are required to guarantee a good level of QoS (Quality of Service). Such as being able to manage at least a five hundred  				simultaneous user connections for each store, in order to let the all customer being able to line up, re-elaborate periodically the stats for the manager with         a period less than one minute.
+
+\end{itemize}
+	
+
 \section{Design Constraints}
 
 \subsection{Standard Compliance}
+
+All measurements are made by using the SI standard of measurements: 
+\begin{itemize}
+	\item Distance [m] \\
+	\item Time [s] \\
+\end{itemize} 
+All information regarding the users and the data collected by the application will be kept safe, more information in that regard will be stated on an agreement the user will have to accept. Clup pledge to respect what it will be written in that agreement. \\
+
 \subsection{Hardware limitations}
+
+The most important hardware requirements are the ones used by the store, necessaries for the basic function of the service. It must have two different hardware components:
+\begin{itemize}
+	\item One that has to acts as physical spot and so it is preferably a totem but in more general terms a tablet connected to a printer should suffice, and it is 			implied that the tablet or the totem should be also connected to internet to communicate with the Clup server. The tablet is needed for letting people choose               to get a paper ticket and the printer should print and hand it to them.
+
+	\item The second component must be able to scan the QR code in order to let people enter when It is their turn and reject them when it is not their turn. 			So, it is preferably to have a turnstile with a scanner implemented on it for this purpose. Also is suggested to have a screen that shows the current position 			of the queue in order to reduce interactions.
+	But the minimum requirement is to have at least a mobile scanner, that is  required to be used by an operator that so needs to stay close to the entrance. 			Also, in this case, the scanner has to be connected to the internet or It has to be connected to another device in the store network that is connected to the 			internet in order to verify the correctness of the QR code. 
+
+\end{itemize}
+
+There are also hardware requirements for the manager and the customers, the first one needs a device with a screen like a computer or a tablet, that is connected to internet for the entirety opening hours of the store in order to let the manager control and manage the influx of people. The customers need a mobile device with internet access and a GPS sensor, so a smartphone is preferred, in order to use both line-up and booking functionalities. 
+
 \subsection{Any Other Constraint}
+
+The user cannot line-up if he is already in line
+ The user must give to the app permission to GPS during all the time he is in line, without this permission the user will be not able to look at his ticket and show the QR code.
+
 
 \section{Software System Attributes}
 
 \subsection{Reliability}
+The Clup system should be operating continuously as much as possible, so it should be up for at least ninety nine percent of time. The faults and problem in the system should not occur during times where there is a high influx of people as they could cause the most dangerous situations. So, the system must contain some mechanism to increase its fault tolerance especially in critical periods of the day like peak hours of stores. And have, extra mechanisms during high load periods like holidays. An alternative of the required hardware of a store should always be available in case of failures, and they both should regularly checked.
+ The collection of data is not a particularly important aspect of the application, but it should be still robust, so the data should be backed-up regularly in physical storage devices. 
+
 \subsection{Availability}
+As stated above, the operating time of the system, and so its availability should be at least ninety nine percent of time. Scheduled maintenance should be programmed during the period between midnight and five a.m. since it is the period when most stores are closed, and the working ones have small load.
+
 \subsection{Security}
+The data collected by the application is not particularly sensible, but even so the applications should focus on keep it safe, by mainly encrypting the data before storing it and by using an encrypted channel to transmit it. Furthermore, the development of all components of the applications should be done in a way that considers the latest possible exploit and the possible vulnerability of the system and aiming to cover them all.  
+
 \subsection{Maintainability}
+The application should be designed by keeping in mind the design patterns of coding. Such as, dividing the application in functional components that are the least dependent on each other. So that their maintenance is done independently and does not spawn irregular behaviours and requires less downtime for the whole system to implement it. 
+
 \subsection{Portability}
+The applications should made available for:
+Linux, Windows, macOS, Android and iOS for the manager device and physical spot
+Android and iOS for the customers device. 
+It should also be available for some older versions of these operative systems without it being a constrain. 
