--- a/RASD/main/FormalAnalysisUsingAlloy.tex
+++ b/RASD/main/FormalAnalysisUsingAlloy.tex
@@ -15,22 +15,22 @@ It is also shown by the Alloy’s graphic tool some worlds that evidence how the
 	\label{figure: Assertions verification}
 \end{figure}
 
-\begin{figure}[H]
-	\includegraphics[width=1.5\textwidth]{images/AlloyW1.png}
-	\caption{World1}
+\begin{sidewaysfigure}
+	\includegraphics[width=1.0\textwidth]{images/AlloyW1.png}
+	\caption{World1.}
 	\label{figure: World1}
-\end{figure}
+\end{sidewaysfigure}
 
-\begin{figure}[H]
+\begin{sidewaysfigure}
 	\centering
-	\includegraphics[width=1.8\textwidth, angle = 90]{images/world_3.png}
-	\caption{World2}
+	\includegraphics[width=1.0\textwidth]{images/world_3.png}
+	\caption{World2.}
 	\label{figure: World2}
-\end{figure}
+\end{sidewaysfigure}
 
-\begin{figure}[H]
+\begin{sidewaysfigure}
 	\centering
-	\includegraphics[width=1.8\textwidth, angle = 90]{images/EntraFunction}
-	\caption{Entra function}
+	\includegraphics[width=1.0\textwidth]{images/EntraFunction}
+	\caption{Entra function.}
 	\label{figure: Entra function}
-\end{figure}
+\end{sidewaysfigure}
