--- a/RASD/main/OverallDescription.tex
+++ b/RASD/main/OverallDescription.tex
@@ -109,12 +109,10 @@ Below has been reported the list of our domain assumptions.
 	\item \textbf{{[D6]}}: Outside the store there is space to queue.
 	\item \textbf{{[D7]}}: Customers have a smartphone.
 	\item \textbf{{[D8]}}: Customers have installed the \gls{clup} application.
-	\item \textbf{{[D9]}}: Customers allow the permissions requested by the application.
-	\item \textbf{{[D10]}}: Customers keep Internet connection active.
+	\item \textbf{{[D9]}}: Users allow the permissions requested by the application.
+	\item \textbf{{[D10]}}: Users keep Internet connection active.
 	\item \textbf{{[D11]}}: There is a store manager present in the store.
-	\item \textbf{{[D12]}}: Store managers allow the permissions requested by the application.
-	\item \textbf{{[D13]}}: Store managers keep Internet connection active.
-	\item \textbf{{[D14]}}: Physical spots are powered on every working day.
-	\item \textbf{{[D15]}}: Physical spots are refilled when asked by the system.
+	\item \textbf{{[D12]}}: Physical spots are powered on every working day.
+	\item \textbf{{[D13]}}: Physical spots are refilled when asked by the system.
 
 \end{itemize}
