sequence diagrams DD

--- a/DD/main/ArchitecturalDesign.tex
+++ b/DD/main/ArchitecturalDesign.tex
@@ -22,8 +22,26 @@
 
 \begin{figure}[H]
 	\centering
+	\includegraphics[width=1.0\textwidth]{images/sessionToken_sequence_diagram.pdf}
+	\caption{Session control sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
 	\includegraphics[width=1.0\textwidth]{images/signUp_sequence_diagram.pdf}
 	\caption{Sign Up sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/logIn_sequence_diagram.pdf}
+	\caption{Log In sequence diagram.}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1.0\textwidth]{images/liningUp_sequence_diagram.pdf}
+	\caption{Lining Up sequence diagram.}
 \end{figure}
 
 \section{Component Interfaces}
